# flyStereo

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
apps/: CMakeLists.txt  test_time_log.cc
apps/acquire_calib_images/: CMakeLists.txt  acquire_calib_images.cc
apps/flyStereo/: CMakeLists.txt  fly_stereo.cc
apps/fly_stereo/: fly_stereo.cc
apps/imu_compensation/: CMakeLists.txt  imu_compensation.cc
apps/viz_demo/: CMakeLists.txt  viz_demo.cc
config/: acquire_calib_images.yaml  cam_stereo.yml  fly_stereo_test.yaml  record.yaml  replay.yaml  replay_pc.yaml  test_imu.yaml
config/flight/: fly_stereo_test.yaml  oakd_record.yaml  oakd_replay.yaml  record.yaml  replay_nano.yaml  replay_pc.yaml
config/hilsim/: acquire_calib_images.yaml  fly_stereo_test.yaml  record.yaml  replay.yaml  replay_pc.yaml  test_imu.yaml
config/orb_slam3/: oak.yaml  oakd2.yaml
docker/: Dockerfile  docker_build.sh  docker_run.sh
docker/cross_compile/: Dockerfile
docker/printers/: .gdbinit  printers.py
include/fly_stereo/: image_processor.h
lib/: CMakeLists.txt
lib/flyStereo/: CMakeLists.txt  debug_video_recorder.h  interface.h  kalman_filter.cc  kalman_filter.h  oakd_orb3.cc  pipeline.cc  pipeline.h  sql_logger.cc  sql_logger.h  stereo_calibration.h  stereo_calibration_dai_convert.h  timed_logger.hpp  umat.h  utility.h  vio.cc  vio.h  vio.tpp
lib/flyStereo/image_processing/: cv_backend.h  cv_cpu_backend.h  debug_video.avi  image_processor.cc  image_processor.h  image_processor.tpp  opt_flow_base.h  opt_flow_base.tpp  opt_flow_cv_gpu.h  opt_flow_cv_stream.h  opt_flow_stream_base.h  opt_flow_stream_base.tpp  opt_flow_vpi_gpu.h  opt_flow_vpi_stream.h  optical_flow_base.h  optical_flow_base.tpp  optical_flow_points.h  point_ops.h  vpi_backend.h  vpi_check.h
lib/flyStereo/image_processing/detections/: cv_goodfeaturestotrack.h  cv_goodfeaturestotrack_cpu.h  detections_base.h  detections_base.tpp  vpi_harris.h
lib/flyStereo/image_processing/optical_flow/: optical_flow_base.h  optical_flow_base.tpp  pyr_lk_cv_cpu.h  pyr_lk_cv_gpu.h  pyr_lk_vpi_gpu.h
lib/flyStereo/image_processing/streams/: cv_cpu_stream.h  cv_stream.h  stream_base.h  stream_base.tpp  vpi_stream.h
lib/flyStereo/oakd/: oakd_feature_tracker.h  oakd_feature_tracker.tpp
lib/flyStereo/sensor_io/: CMakeLists.txt  arducam_system.cc  arducam_system.h  arducam_system.tpp  camera.cc  camera.h  camera_trigger.cc  camera_trigger.h  image_sink.cc  image_sink.h  log_params.h  mavlink_reader.cc  mavlink_reader.h  oakd.cc  oakd.h  oakd.h.bak  oakd.tpp  sensor_interface.cc  sensor_interface.h  sensor_interface.tpp  sql_sink.cc  sql_sink.h  sql_sink.tpp  sql_src.cc  sql_src.h  sql_src.tpp  sqlite3_params.h  stereo_system_src_interface.h  stereo_sytem_sink_interface.h
lib/flyStereo/sensor_io/mavlink/: checksum.h  protocol.h
lib/flyStereo/sensor_io/mavlink/fly_stereo/: gtestsuite.hpp  mavlink_msg_command.hpp  mavlink_msg_imu.h  mavlink_msg_vio.hpp  version.h
lib/flyStereo/test/: generators.h  image_processor_tests.cc  opt_flow_tests.cc  umat_tests.cc
lib/flyStereo/test/benchmark/: opt_flow_benchmark.cc
lib/flyStereo/tests/: CMakeLists.txt  generators.h  image_processor_tests.cc  oakd_tests.cc  opt_flow_tests.cc  umat_tests.cc
lib/flyStereo/tests/benchmark/: opt_flow_benchmark.cc
lib/flyStereo/tests/umat/: umat_test_helpers.cc  umat_test_helpers.h  umat_tests.cc  umat_vpiarray_tests.cc  umat_vpiimage_tests.cc
lib/flyStereo/types/: umat.h  umat_vpiarray.h  umat_vpiimage.h  vpi_check.h
lib/flyStereo/visualization/: draw_to_image.cc  draw_to_image.h  visualization.cc  visualization.h
lib/include/flyStereo/: image_processor.h  interface.h  kalman_filter.h  optical_flow_points.h  pipeline.h  sql_logger.h  timed_logger.hpp  vio.h
lib/include/flyStereo/msckf_vio/: cam_state.h  feature.hpp  imu_state.h  msckf_vio.h
lib/include/flyStereo/sensor_io/: camera.h  image_sink.h  sensor_interface.h
lib/include/flyStereo/sensor_io/mavlink/: mavlink_sha256.h  message.hpp
lib/include/flyStereo/sensor_io/mavlink/fly_stereo/: fly_stereo.hpp  mavlink.h  mavlink_msg_reset_counters.hpp  mavlink_msg_vio.h  testsuite.h
lib/include/flyStereo/visualization/: draw_to_image.h
lib/include/fly_stereo/: camera.h  camera_trigger.h  image_processor.h  interface.h  kalman_filter.h  mavlink_reader.h  optical_flow_points.h  pipeline.h  sql_logger.h  utility.h  vio.h
lib/include/fly_stereo/mavlink/common/: common.h  common.hpp  mavlink_msg_component_information.hpp
lib/include/fly_stereo/mavlink/fly_stereo/: fly_stereo.h  fly_stereo.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_attitude.h  mavlink_msg_attitude.hpp  mavlink_msg_imu.h  mavlink_msg_imu.hpp  testsuite.h  version.h
lib/include/fly_stereo/msckf_vio/: math_utils.hpp  msckf_vio.h  utils.h
lib/include/fly_stereo/sensor_io/: camera.h  camera_trigger.h  mavlink_reader.h  sensor_interface.h
lib/include/fly_stereo/sensor_io/mavlink/: mavlink_conversions.h  mavlink_get_info.h  mavlink_helpers.h  mavlink_types.h  msgmap.hpp
lib/include/fly_stereo/sensor_io/mavlink/fly_stereo/: fly_stereo.h  fly_stereo.hpp  gtestsuite.hpp  mavlink_msg_command.h  mavlink_msg_command.hpp  mavlink_msg_imu.h  mavlink_msg_imu.hpp  mavlink_msg_reset_counters.h  mavlink_msg_reset_counters.hpp  mavlink_msg_vio.h  mavlink_msg_vio.hpp  testsuite.h  version.h
lib/include/fly_stereo/visualization/: visualization.h
lib/src/: camera.cc  camera_trigger.cc  debug_video_recorder.h  image_processor.cc  kalman_filter.cc  mavlink_reader.cc  pipeline.cc  sql_logger.cc  vio.cc
lib/src/msckf_vio/: msckf_vio.cpp  utils.cpp
lib/src/sensor_io/: camera.cc  camera_trigger.cc  image_sink.cc  mavlink_reader.cc  sensor_interface.cc
lib/src/visualization/: draw_to_image.cc  visualization.cc
lib/test/: image_processor_tests.cc
matlab/: R2Euler.m  plot_trajectory.m
scripts/: calibrate_stereo.py  renumber_images.py
scripts/services/: flyStereo.service  install_flyStereo.sh
src/: gpio_main.cc  image_processor.cc  main.cc  mavlink_reader.cc  send_f.cc
(+2 files in other folders)
